--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.514.0",
+    "overlay-kit": "^1.8.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
